# light_embebbed_server

./: .gitignore  CMakeLists.txt  Download-yaml-cpp.CMakeLists.cmake.in  DownloadProject.cmake  readme.txt
include/: listener.h  session_handler.h  tcp_server.h  worker.h
include/config/: base_config_parser.h  config_traits.h  server_config_exception.h  server_config_mananger.h  server_config_mananger_impl.h  yaml_config_parser.h
libcommon/: CMakeLists.txt
libcommon/include/: destroyer_singleton.h  directory.h  event.h
libcommon/source/: directory.cpp
libhttp_api/: CMakeLists.txt
libhttp_api/include/: http_struct.h
libnetwork_api/: CMakeLists.txt
libnetwork_api/include/: base_server.h  test.h~
libnetwork_api/include/connection/: base_selector.h  base_session.h  connection_traits.h  endpoint.h  endpoint_ipv4.h  selector_epoll.h
libnetwork_api/include/connection/tcp_connection/: master_connection.h  slave_connection.h  tcp_master_connection.h  tcp_slave_connection.h
libnetwork_api/source/: base_server.cpp  base_session.cpp  test_network_api.cpp
libnetwork_api/source/connection/: endpoint_ipv4.cpp  selector_epoll.cpp
libnetwork_api/source/connection/tcp_connection/: tcp_master_connection.cpp  tcp_slave_connection.cpp
libthread_api/: CMakeLists.txt
libthread_api/include/: cancellation_guard.h  cancellation_handler.h  cancellation_token.h  cv_handler.h  function_wrapper.h  joinable_thread.h  joinable_thread_impl.h  joinable_thread_traits.h  thread_safe_queue_impl.h  thread_save_queue.h
libthread_api/source/: cancellation_guard.cpp  cancellation_token.cpp  cv_handler.cpp  joinable_thread.cpp
settings/: server_config_example.yaml
source/: listener.cpp  main.cpp  session_handler.cpp  tcp_server.cpp  worker.cpp
source/config/: config_traits.cpp  yaml_config_parser.cpp
testing/: CMakeLists.txt
testing/include/: libhttp_api_test.h  libnetwork_api_test.h  libthread_api_test.h  server_config_mananger_test.h
testing/source/: testing.cpp
